--- a/Bountiful/styles/medium.css
+++ b/Bountiful/styles/medium.css
@@ -148,7 +148,7 @@
             position: absolute;
             width: 100px;
             bottom: 170px;
-            left: 280px;
+            left: 40%;
           }
           footer {
             display: grid;
